@@ -1,3 +1,9 @@
+2017-02-14 Werner S Freund
+	* Important bug fix on inspect_list_attrs which would span dimension using
+	the same instances. Besides the fix, it will now by default work on 
+	deepcopy of the instances now.
+	* Tagging RingerCore-01-01-00b
+
 2017-02-13 Werner S Freund
 	* Added support to AnalysisBase integration
 	* Added firstItemDepth to LoopingBounds module
